--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "archiver": "^7.0.1",
     "cloudinary": "^2.5.1",
     "lucide-react": "^0.474.0",
+    "mongoose": "^8.10.1",
     "next": "15.1.6",
     "next-qrcode": "^2.5.1",
     "react": "^19.0.0",
