--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "archiver": "^7.0.1",
     "cloudinary": "^2.5.1",
     "lucide-react": "^0.474.0",
